# emporionrs

./: .gitignore  Cargo.toml  docker-compose.yml  params.json
backend/: Cargo.toml  setEnv.sh
backend/bindings/: BlockchainNotification.ts  ChatMessage.ts  Coin.ts  Data.ts  DecodedData.ts  EncodedData.ts  Entity.ts  Error.ts  IbcRecieve.ts  IbcTransfer.ts  MessageSend.ts  NonceReq.ts  NonceRes.ts  Notification.ts  Paket.ts  Prices.ts  PubKey.ts  TokenReq.ts  TokenRes.ts  TokenResp.ts  TranslateReq.ts
backend/proto/cosmos/tx/v1beta1/: tx.proto
backend/proto/custom/proto/: anymsg.proto
backend/src/: main.rs  utils.rs
backend/src/routes/: auth.http  auth.rs  blockchain.rs  chat.rs  mod.rs  nonce.http  nonce.rs  prices.rs  ws.rs
backend/src/structs/: blockchain.rs  chat_message.rs  db.rs  error.rs  jwt.rs  mod.rs  nonce.rs  notification.rs  prices.rs  sign_doc.rs  translate.rs
backend/src/structs/exec/: broadcast.rs  mod.rs
backend/src/structs/msgs/: broadcast.rs  ibc_recieve.rs  ibc_transfer.rs  mod.rs  msg_send.rs  type_serializer.rs
backend/src/structs/query/: auth.rs  bank.rs  mod.rs  wasm.rs
contracts/: Cargo.toml
contracts/emporion_bank/: Cargo.toml  README.md
contracts/emporion_bank/.cargo/: config.toml
contracts/emporion_bank/src/: contract.rs  error.rs  lib.rs  state.rs  utils.rs
contracts/emporion_bank/src/bank/: state.rs
contracts/emporion_bank/src/escrow/: msgs.rs  state.rs
contracts/emporion_core/: Cargo.toml
contracts/emporion_core/src/: contract.rs  error.rs  lib.rs  msgs.rs
contracts/emporion_core/src/bank/: bank.rs  mod.rs  utils.rs
emporion.inlang/: project_id  settings.json
forontend/: a.json  bun.lockb  index.html  package.json  (+3 more)
(+159 files in other folders)
