[package]
name = "backendrs"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = {version = "0.7.9", features = ["ws", "macros"]}
serde = {version ="1.0.215", features = ["derive"]}
tokio = {version = "1.41.1", features = ["full"]}
reqwest = { version = "0.12", features = ["json"] }
jsonwebtoken = "9.3.0"
bech32 = "0.11.0"
serde_json = "1.0.133"
ulid = "1.1.3"
secp256k1 = {version = "0.30.0", features = ["hashes"]}
base64 = "0.22.1"
tower-http = {version = "0.6.2", features = ["cors"]}
futures = "0.3.31"
tokio-tungstenite = {version = "0.24.0", features = ["native-tls"]}
protobuf-parse = "3.7.1"
protobuf = "3.7.1"
prost-reflect = "0.14.3"
